# tc-chat

./: .gitignore  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: deploy.yml
cli/: Cargo.toml  README.md
cli/scripts/: fetch-mistlib.mjs
cli/src/: archive.rs  base58.rs  bot.rs  chatbot.rs  identity.rs  lib.rs  llm.rs  llm_network.rs  main.rs  node.rs  stable_json.rs  store.rs  wire.rs
public/: manifest.webmanifest
src/: app.tsx  index.css  main.tsx
src/components/: Avatar.tsx  BoardNodeView.tsx  CalendarEventComposer.tsx  CalendarEventRow.tsx  CalendarView.tsx  CallControls.tsx  CallDock.tsx  ChatWindow.tsx  ConfirmDialog.tsx  DevConsole.tsx  GifPicker.tsx  Lightbox.test.tsx  Lightbox.tsx  LinkPreviewCard.test.tsx  LinkPreviewCard.tsx  MarkdownView.test.tsx  MarkdownView.tsx  MediaCautionDialog.tsx  MediaGalleryView.test.tsx  MediaGalleryView.tsx  MessageBubble.test.tsx  MessageBubble.tsx  MessageInput.test.tsx  MessageInput.tsx  NodeComposer.tsx  Onboarding.tsx  PeerProfileModal.test.tsx  PeerProfileModal.tsx  PersonalCalendarPanel.tsx  ProfilePanel.tsx  ProjectBoard.test.tsx  ProjectBoard.tsx  ProjectCard.test.tsx  ProjectCard.tsx  ReactionBar.tsx  RemoteScreenStage.tsx  RoomContent.tsx  RoomIdentityPanel.tsx  RoomNamePanel.tsx  ScreenShareView.tsx  (+10 more)
src/crypto/: didIdentity.test.ts  didIdentity.ts  postCipher.ts
src/hooks/: useCalendarEvents.ts  useChatRoom.ts  useFriends.test.ts  useFriends.ts  useHistorySync.test.ts  useHistorySync.ts  useMediaGallery.ts  useMessageAlerts.test.ts  useMessageAlerts.ts  usePostStream.ts  (+18 more)
(+72 files in other folders)
