[package]
name = "tc-chat-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "tc_chat_cli"
path = "src/lib.rs"

[[bin]]
name = "tc-chat"
path = "src/main.rs"

[dependencies]
# mistlib source is fetched into cli/.mistlib-src by scripts/fetch-mistlib.mjs
# (see README) — run that before `cargo build` the first time.
mistlib = { path = ".mistlib-src/mistlib-native", package = "mistlib-native" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
bs58 = "0.5"
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
